
2023-01-23 David Declerck <david.declerck@ocamlpro.com>

	* ebcdic500_latin1: new translation table from EBCDIC 500 to Latin-1
	* ebcdic500_ascii7bit: translation table from EBCDIC 500 to 7-bit ASCII
	  as per IBM, extracted from libcob/cconv.c (cob_ibmebcdic_ascii)
	* ebcdic500_ascii8bit: translation table from EBCDIC 500 to 7-bit ASCII
	  as per GCOS7, extracted from libcob/cconv.c (cob_gcos7ebcdic_ascii)
	* default: the original GnuCOBOL translation table,
	  extracted from libcob/cconv.c (cob_ebcdic_ascii)
	* alternate: the original GnuCOBOL "alternate" translation table,
	  extracted from libcob/cconv.c (cob_ebcdic_ascii_alt)

2023-01-18  Simon Sobisch <simonsobisch@gnu.org>

	* gcos.words: complete update
	* general: added  missing alias JUST=JUSTIFIED

2023-01-16  Simon Sobisch <simonsobisch@gnu.org>

	* realia-strict.conf: change defaultbyte from space to zero

2022-12-07  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* general: rename partial-replacing-with-literal into
	  partial-replace-when-literal-src, with special semantics of
	  "skip"

2022-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: updated COB_CURRENT_DATE for epoch

2022-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* ibm.words, mvs.words: removed words only reserved with EXEC SQL
	  coprocessor, fixing bug #810
	* ibm.words: update for Enterprise COBOL 6.4 (added FUNCTION-ID)

2022-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* ibm.words, acu.words, bs2000.words: enabled JSON + XML registers

2022-10-10  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: add COB_CORE_FILENAME and adjust COB_CORE_ON_ERROR

2022-10-05  Simon Sobisch <simonsobisch@gnu.org>

	* *.conf: changed top-level-occurs-clause "skip" to "unconformable"

2022-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: adjustments for LINE SEQUENTIAL docs

2022-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* runtime.cfg: extend docs for LINE SEQUENTIAL settings
