@@ -3708,7 +3708,7 @@ AT_CLEANUP
 
 AT_SETUP([ACUCOBOL 32bit literal size])
 # ACUCOBOL literal max - the result is system dependent on size of unsigned long int
-AT_SKIP_IF(true)
+AT_SKIP_IF([true])
 
 AT_KEYWORDS([extensions literals])
 
@@ -7085,7 +7085,7 @@ AT_DATA([prog.cob], [
        LINKAGE SECTION.
        01  XMYREC.
           05  XFLD1   PIC 9(2) VOLATILE.
-       SCREEN SECTION.
+      *SCREEN SECTION.
       *01  WRONG-SCREEN.
       *   05  WRONG-FIELD   PIC X VOLATILE.
       *
@@ -7097,6 +7097,7 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE_ONLY -Wno-unfinished prog.cob], [0], [],
 [prog.cob:18: warning: initial VALUE clause ignored for EXTERNAL item 'STEP'
 ])
+AT_CHECK([$COMPILE_ONLY -std=ibm-strict -w prog.cob], [0], [], [])
 
 AT_CLEANUP
 
